--- a/kontakt.html
+++ b/kontakt.html
@@ -12,6 +12,8 @@
     <header>
         <a href="index.html">Forside</a>
         <a href="kontakt.html">Kontakt</a>
+        <a href="galleri.html">Galleri</a>
+
     </header>
     <main>
         <h1>Kontakt</h1>
