--- a/galleri.html
+++ b/galleri.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <title>Galleri</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
